[package]
name = "treetop-client"
version = "0.0.1"
edition = "2024"
description = "Typed async Rust client for Treetop policy authorization servers"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/treetop-client"
homepage = "https://github.com/terjekv/treetop-client"
repository = "https://github.com/terjekv/treetop-client"
authors = ["Terje Kvernes"]
keywords = ["authorization", "cedar", "policy", "treetop"]
categories = ["api-bindings", "authentication"]
rust-version = "1.85"

[features]
server-tests = []

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
secrecy = { version = "0.10", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
serde_json = "1"
rstest = "0.24"
regex = "1"
serial_test = "3"
